<resources>
    <string name="app_name">ServingPlanet</string>
    <string name="login">Login</string>
    <string name="user_id">User Id</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot Password ?</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_up">SIGN UP</string>
    <string name="text_sign_up">Don\'t have an account? Sign Up</string>
    <string name="invalid_password">Empty or Invalid Password</string>
    <string name="invalid_user_id">Empty or invalid UserId</string>
    <string name="no_internet_connection_message">Please turn on internet connection</string>
    <string name="back_to_login">Back to Login</string>
    <string name="enter_code">Enter Verification Code</string>
    <string name="verification_code">Verification Code</string>
    <string name="submit">Submit</string>
    <string name="invalid_verification_code">Empty or Invalid verification code</string>
    <string name="enter_pin_code">Enter Pin Code</string>
    <string name="confirm_pin">Confirm Pin</string>
    <string name="str_continue">Continue</string>
    <string name="set_pin">Set Pin</string>
    <string name="invalid_pin">Invalid Pin</string>
    <string name="invalid_confirm_pin">Pin and Confirm PIN must be same</string>
    <string name="str_forgot_password">Forgot Password</string>
    <string name="str_reset_password">Please Reset Password to get access.</string>
    <string name="enter_user_id">Enter User ID</string>
    <string name="account_recovery">ACCOUNT RECOVERY</string>
    <string name="security_questions">Security Questions: </string>
    <string name="something_went_wrong">Something went wrong or no internet connection...Please try again!</string>
    <string name="select_security_question">Please select security question</string>
    <string name="referal_id">Referral-id</string>
    <string name="user_name">Name</string>
    <string name="whatspp_num">Whatsapp No</string>
    <string name="invalid_answer">Empty or invalid answer</string>
    <string name="email_id">Email-id</string>
    <string name="bitcoin_address">Bitcoin Address</string>
    <string name="helping_amount">Helping Amount</string>
    <string name="select_question">Select Questions</string>
    <string name="enter_ans">Enter Answer</string>
    <string name="reg_password">Password</string>
    <string name="reg_password_confirm">Password Confirm</string>
    <string name="reg_terms_condition">By clicking Sign up</string>
</resources>
