<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_screen"
    tools:context=".views.RegistrationActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/text_sign_up">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:src="@drawable/ic_logo" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/sign_up"
                android:textColor="@color/textColor"
                android:textSize="20sp"
                android:textStyle="bold" />

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:orientation="vertical"
                android:layout_height="wrap_content">


                <EditText
                    android:id="@+id/edit_user_referral_id"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:background="@drawable/edit_background"
                    android:drawableLeft="@drawable/ic_referral_id"
                    android:drawablePadding="10dp"
                    android:hint="@string/referal_id"
                    android:imeOptions="actionDone"
                    android:inputType="textPassword"
                    android:padding="5dp"
                    android:singleLine="true"
                    android:textColor="@color/textColor"
                    android:textColorHint="@color/textColor" />

            <EditText
                android:id="@+id/edit_user_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:background="@drawable/edit_background"
                android:drawableLeft="@drawable/ic_name"
                android:drawablePadding="10dp"
                android:hint="@string/user_name"
                android:imeOptions="actionDone"
                android:inputType="textPassword"
                android:padding="5dp"
                android:singleLine="true"
                android:textColor="@color/textColor"
                android:textColorHint="@color/textColor" />

                <EditText
                    android:id="@+id/edit_user_whatsapp_no"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:background="@drawable/edit_background"
                    android:drawableLeft="@drawable/ic_whatsapp_no"
                    android:drawablePadding="10dp"
                    android:hint="@string/whatspp_num"
                    android:imeOptions="actionDone"
                    android:inputType="textPassword"
                    android:padding="5dp"
                    android:singleLine="true"
                    android:textColor="@color/textColor"
                    android:textColorHint="@color/textColor" />

                <EditText
                    android:id="@+id/edit_email_id"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:background="@drawable/edit_background"
                    android:drawableLeft="@drawable/ic_email_id"
                    android:drawablePadding="10dp"
                    android:hint="@string/email_id"
                    android:imeOptions="actionDone"
                    android:inputType="textPassword"
                    android:padding="5dp"
                    android:singleLine="true"
                    android:textColor="@color/textColor"
                    android:textColorHint="@color/textColor" />

                <EditText
                    android:id="@+id/edit_bitcoin_address"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:background="@drawable/edit_background"
                    android:drawableLeft="@drawable/ic_bitcoin_acc"
                    android:drawablePadding="10dp"
                    android:hint="@string/bitcoin_address"
                    android:imeOptions="actionDone"
                    android:inputType="textPassword"
                    android:padding="5dp"
                    android:singleLine="true"
                    android:textColor="@color/textColor"
                    android:textColorHint="@color/textColor" />

                <EditText
                    android:id="@+id/edit_helping_amount"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:background="@drawable/edit_background"
                    android:drawableLeft="@drawable/ic_helping_amount"
                    android:drawablePadding="10dp"
                    android:hint="@string/helping_amount"
                    android:imeOptions="actionDone"
                    android:inputType="textPassword"
                    android:padding="5dp"
                    android:singleLine="true"
                    android:textColor="@color/textColor"
                    android:textColorHint="@color/textColor" />

                <EditText
                    android:id="@+id/edit_select_question"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:background="@drawable/edit_background"
                    android:drawableLeft="@drawable/select_quest"
                    android:drawablePadding="10dp"
                    android:hint="@string/select_question"
                    android:imeOptions="actionDone"
                    android:inputType="textPassword"
                    android:padding="5dp"
                    android:singleLine="true"
                    android:textColor="@color/textColor"
                    android:textColorHint="@color/textColor" />

                <EditText
                    android:id="@+id/edit_enter_answer"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:background="@drawable/edit_background"
                    android:drawableLeft="@drawable/ic_answer"
                    android:drawablePadding="10dp"
                    android:hint="@string/enter_ans"
                    android:imeOptions="actionDone"
                    android:inputType="textPassword"
                    android:padding="5dp"
                    android:singleLine="true"
                    android:textColor="@color/textColor"
                    android:textColorHint="@color/textColor" />


                <EditText
                    android:id="@+id/edit_enter_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:background="@drawable/edit_background"
                    android:drawableLeft="@drawable/ic_password"
                    android:drawablePadding="10dp"
                    android:hint="@string/enter_ans"
                    android:imeOptions="actionDone"
                    android:inputType="textPassword"
                    android:padding="5dp"
                    android:singleLine="true"
                    android:textColor="@color/textColor"
                    android:textColorHint="@color/textColor" />


                <EditText
                    android:id="@+id/edit_password_confrim"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:background="@drawable/edit_background"
                    android:drawableLeft="@drawable/ic_password"
                    android:drawablePadding="10dp"
                    android:hint="@string/enter_ans"
                    android:imeOptions="actionDone"
                    android:inputType="textPassword"
                    android:padding="5dp"
                    android:singleLine="true"
                    android:textColor="@color/textColor"
                    android:textColorHint="@color/textColor" />

            <TextView
                android:id="@+id/text_forgot_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:gravity="end"
                android:padding="5dp"
                android:text="@string/forgot_password"
                android:textColor="@color/textColor" />

            <Button
                android:id="@+id/button_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="50dp"
                android:layout_marginRight="50dp"
                android:layout_marginTop="15dp"
                android:layout_weight="1"
                android:background="@drawable/button_background_orange"
                android:text="@string/sign_up"
                android:textColor="@android:color/white" />
            </LinearLayout>
            </ScrollView>
        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:enabled="true"/>

    <TextView
        android:id="@+id/text_sign_up"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:gravity="center"
        android:padding="5dp"
        android:text="@string/text_sign_up"
        android:textColor="@color/textColor" />
    </LinearLayout>

</RelativeLayout>