<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_screen">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/text_sign_up">

        <LinearLayout

            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:src="@drawable/ic_logo" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/account_recovery"
                android:textColor="@color/textColor"
                android:textSize="@dimen/text_size_twenty"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="5dp"
                android:padding="5dp"
                android:text="@string/security_questions"
                android:textColor="@color/textColor"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/edit_background"
                android:padding="0.5dp">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:src="@drawable/select_quest" />

                <Spinner
                    android:id="@+id/spinner_questions"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:padding="5dp"
                    android:singleLine="true" />
            </LinearLayout>

            <EditText
                android:id="@+id/edit_user_answer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:background="@drawable/edit_background"
                android:drawableLeft="@drawable/ic_answer"
                android:drawablePadding="10dp"
                android:hint="Enter Answer"
                android:imeOptions="actionNext"
                android:padding="5dp"
                android:singleLine="true"
                android:textColor="@color/textColor"
                android:textColorHint="@color/textColor" />


            <Button
                android:id="@+id/button_submit_question"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="50dp"
                android:layout_marginRight="50dp"
                android:layout_marginTop="15dp"
                android:layout_weight="1"
                android:background="@drawable/button_background_orange"
                android:text="@string/submit"
                android:textColor="@android:color/white" />
        </LinearLayout>
    </ScrollView>


    <TextView
        android:id="@+id/back_sign_up"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:gravity="center"
        android:padding="5dp"
        android:text="@string/back_to_login"
        android:textColor="@color/textColor" />

</RelativeLayout>